--- a/src/app/page/about/about.component.html
+++ b/src/app/page/about/about.component.html
@@ -127,4 +127,7 @@
     </p>
   </div>
 </div>
+<footer style="text-align: center; margin-top: 2rem">
+  <p>&copy; {{ currentYear }} San Juan Batangas. All right reserved.</p>
+</footer>
 <router-outlet></router-outlet>
