--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -4,6 +4,7 @@
   </div>
   <div class="image-container">
     <form (submit)="login()">
+      <div class="image-container1"></div>
       <div>
         <label for="username">Username or Email:</label>
         <input
@@ -38,3 +39,6 @@
   </div>
   <div class="background-image"></div>
 </body>
+<footer style="text-align: center; margin-top: 2rem">
+  <p>&copy; {{ currentYear }} San Juan Batangas. All right reserved.</p>
+</footer>
