--- a/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.css
+++ b/src/app/home/barangay-rankingbmi/barangay-rankingbmi.component.css
@@ -37,7 +37,7 @@ legend {
 }
 
 .barangay-ranking {
-  margin: 20px;
+  margin: 10px;
 }
 
 table {
@@ -63,16 +63,6 @@ tr:nth-child(even) {
 
 tr:nth-child(odd) {
   background-color: #fff;
-}
-
-#barGraph {
-  max-width: 600px; /* Adjust the width as needed */
-  margin: 0 auto; /* Horizontally center the canvas */
-  display: block; /* Ensure it takes full available width */
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  font-size: 5px;
 }
 
 /* dinagdag ko dyann sa modal */
@@ -140,3 +130,53 @@ tr:nth-child(odd) {
   background-color: #b0d9b1;
 }
 
+@media (max-width: 768px) {
+  #bmiranking {
+    padding: 5px;
+    margin-top: 10px;
+  }
+
+  #bmiranking legend {
+    font-size: 60%;
+  }
+
+  .ranking-table table {
+    border-collapse: collapse;
+    font-size: 5%;
+  }
+
+  .ranking-table label {
+    border-collapse: collapse;
+    font-size: 7px;
+    font-weight: bold;
+  }
+
+  .ranking-table input[type="number"],
+  .ranking-table select {
+    font-size: 7px;
+    width: 30%;
+  }
+
+  th,
+  td {
+    max-width: 10px;
+    font-size: 7px;
+    font-weight: bold;
+  }
+
+  .modal {
+    left: 50%;
+    top: 68%;
+    width: 250px;
+    height: 300px;
+  }
+
+  .pagination {
+    font-size: 7px;
+  }
+
+  .pagination Button {
+    font-size: 7px;
+    padding: 0px 10px;
+  }
+}
