--- a/src/app/home/bmi-result/bmi-result.component.css
+++ b/src/app/home/bmi-result/bmi-result.component.css
@@ -205,6 +205,7 @@ legend {
   .result-table td {
     max-width: 10px;
     font-size: 4px;
+    font-weight: bold;
   }
 
   .result-table p {
@@ -215,7 +216,7 @@ legend {
 
   .result-table th {
     background-color: #f2f2f2;
-    font-weight: lighter;
+    font-weight: bold;
   }
 
   button {
