--- a/src/app/home/monthlyheightranking/monthlyheightranking.component.css
+++ b/src/app/home/monthlyheightranking/monthlyheightranking.component.css
@@ -37,7 +37,7 @@ legend {
 }
 
 .barangay-ranking {
-  margin: 20px;
+  margin: 10px;
 }
 
 table {
@@ -128,4 +128,55 @@ tr:nth-child(odd) {
 
 .pagination button:hover {
   background-color: #b0d9b1;
+}
+
+@media (max-width: 768px) {
+  #bmiranking {
+    padding: 5px;
+    margin-top: 10px;
+  }
+
+  #bmiranking legend {
+    font-size: 60%;
+  }
+
+  .ranking-table table {
+    border-collapse: collapse;
+    font-size: 5%;
+  }
+
+  .ranking-table label {
+    border-collapse: collapse;
+    font-size: 7px;
+    font-weight: bold;
+  }
+
+  .ranking-table input[type="number"],
+  .ranking-table select {
+    font-size: 7px;
+    width: 30%;
+  }
+
+  th,
+  td {
+    max-width: 10px;
+    font-size: 7px;
+    font-weight: bold;
+  }
+
+  .modal {
+    left: 50%;
+    top: 68%;
+    width: 250px;
+    height: 300px;
+  }
+
+  .pagination {
+    font-size: 7px;
+  }
+
+  .pagination Button {
+    font-size: 7px;
+    padding: 0px 10px;
+  }
 }
