--- a/src/app/home/userlist/userlist.component.html
+++ b/src/app/home/userlist/userlist.component.html
@@ -23,27 +23,29 @@
     <div class="userList">
       <fieldset id="userRecords">
         <label class="legend1">BHW User List</label>
-        <table>
-          <thead>
-            <tr>
-              <th>User ID</th>
-              <th>Username</th>
-              <th>Email</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let user of userList">
-              <td>{{ user.uid }}</td>
-              <td>{{ user.username }}</td>
-              <td>{{ user.email }}</td>
-              <td>
-                <button (click)="editUser(user)">Edit</button>
-                <button (click)="deleteUser(user)">Delete</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="result-table">
+          <table>
+            <thead>
+              <tr>
+                <th>User ID</th>
+                <th>Username</th>
+                <th>Email</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let user of userList">
+                <td>{{ user.uid }}</td>
+                <td>{{ user.username }}</td>
+                <td>{{ user.email }}</td>
+                <td>
+                  <button (click)="editUser(user)">Edit</button>
+                  <button (click)="deleteUser(user)">Delete</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </fieldset>
     </div>
   </div>
