--- a/src/app/page/login/login.component.css
+++ b/src/app/page/login/login.component.css
@@ -56,10 +56,11 @@ form div {
 form label {
   display: block;
   margin-bottom: 5px;
+  font-weight: bold;
 }
 
-form input[type="text"],
-form input[type="password"] {
+input[type="text"],
+input[type="password"] {
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
@@ -79,14 +80,12 @@ form button[type="submit"] {
 form button[type="submit"]:hover {
   background-color: #45a049;
   opacity: 0.8;
-
-  
 }
 .Login {
   display: flex;
   justify-content: space-between;
-  
-  .bck-btn{
+
+  .bck-btn {
     width: 100%;
     padding: 10px;
     background-color: #4caf50;
@@ -94,7 +93,62 @@ form button[type="submit"]:hover {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+  }
+}
 
+@media (max-width: 768px) {
+  h1 {
+    margin-top: 5 0px;
+    font-size: 20px;
+  }
 
+  .image-container {
+    width: 100px;
+    height: 100px;
+
+    margin-top: -10px;
+    margin-left: 30px;
+  }
+
+  .image-container1 {
+    background-image: url("/assets/SanJuan1.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-top: 20px;
+    margin-left: -65px;
+  }
+
+  form {
+    top: 350px;
+    left: 50%;
+    padding: 10px 80px;
+  }
+
+  form label {
+    font-size: 10px;
+  }
+
+  input[type="text"],
+  input[type="password"] {
+    width: 170%;
+    align-items: center;
+    padding: 5px 10px;
+    margin: 0px 0px 10px;
+    box-sizing: border-box;
+  }
+
+  form button[type="submit"] {
+    width: 100%;
+    padding: 5px;
+  }
+
+  .Login {
+    .bck-btn {
+      width: 100%;
+      padding: 5px;
+    }
   }
 }
